# martin-plus-plus

./: .gitignore  Makefile  build.zig  build.zig.zon  gen.h  meson.build  run.sh
include/: attacks.h  board.h  core.h  game.h  helpers.h  magic_bit_board.h  moves.h  piece.h  result.h  square.h
src/: attacks.c  board.c  board.py  game.c  helpers.c  magic_bit_board.c  magic_bit_board_constants.c  main.c  moves.c  piece.c  square.c  tests.zig
src/board/: board.zig  root.zig
test/: attacks.c  board.c  get_attackers.c  piece.c
tests/: tests.c
